--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="IlibellusTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.Ilibellus" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@color/colorPrimary</item>
+        
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        
         <item name="windowActionModeOverlay">true</item>
         <item name="actionModeBackground">@color/colorPrimaryDark</item>
         <item name="searchViewStyle">@style/SearchViewStyle</item>
         <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
 
-    <style name="IlibellusTheme.ApiSpec"/>
+    <style name="Theme.Ilibellus.ApiSpec"/>
 
-    <style name="IlibellusTheme.ApiSpec.Branded">
+    <style name="Theme.Ilibellus.ApiSpec.Branded">
         <item name="android:windowBackground">@drawable/branded_background</item>
     </style>
 
@@ -24,15 +26,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
 
-    <style name="OmniNotesFullscreenTheme" parent="@style/Theme.AppCompat">
-        <item name="actionBarStyle">@style/FullscreenActionBarStyle</item>
-        <item name="windowActionBarOverlay">true</item>
-        <item name="background">@color/black_overlay</item>
-    </style>
-
-    <style name="OmniNotesFullscreenTheme.ApiSpec"/>
-
-    <style name="IlibellusTheme.NoDisplay">
+    <style name="Theme.Ilibellus.NoDisplay">
         <item name="android:windowBackground">@null</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsTranslucent">true</item>
@@ -41,7 +35,10 @@
         <item name="android:windowNoDisplay">true</item>
     </style>
 
-    <style name="IlibellusTheme.ApiSpec.Dialog">
+    
+    
+    
+    <style name="Theme.Ilibellus.ApiSpec.Dialog">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@drawable/bg_card</item>
         <item name="android:windowContentOverlay">@null</item>
@@ -113,54 +110,7 @@
     <style name="Text.Small.Widget" parent="@style/Text.Small">
         <item name="android:textSize">10sp</item>
     </style>
-
-    <style name="UndoBar">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">56dp</item>
-        <item name="android:layout_gravity">bottom</item>
-        <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_marginRight">16dp</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:background">@color/card_undobar_material_background_color</item>
-        <item name="android:clickable">true</item>
-    </style>
-
-    <style name="UndoBarMessage">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:layout_marginRight">16dp</item>
-        <item name="android:textAppearance">?android:textAppearanceMedium</item>
-        <item name="android:textColor">#fff</item>
-    </style>
-
-    <style name="UndoBarButton">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:paddingLeft">16dp</item>
-        <item name="android:paddingRight">16dp</item>
-        <item name="android:background">?android:selectableItemBackground</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:text">@string/undo</item>
-    </style>
-
-    <style name="ButtonBar">
-        <item name="android:paddingLeft">2dp</item>
-        <item name="android:paddingTop">5dp</item>
-        <item name="android:paddingRight">2dp</item>
-        <item name="android:paddingBottom">0dp</item>
-        <item name="android:background">@android:drawable/bottom_bar</item>
-    </style>
-
-    <style name="crouton_text">
-        <item name="android:textAllCaps">true</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
+    
     <style name="fab_labels_style">
         <item name="android:background">@drawable/fab_labels_background</item>
         <item name="android:textColor">@color/text_color</item>
