--- a/app/src/main/res/drawable/bg_category_marker.xml
+++ b/app/src/main/res/drawable/bg_category_marker.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#FFFFFF" />
     <stroke android:width=".05dp" android:color="#d2d2d2" />
-    <corners android:topLeftRadius="11dp" android:topRightRadius="0dp" android:bottomRightRadius="0dp" android:bottomLeftRadius="11dp"/>
+    <corners android:topLeftRadius="@dimen/edge_radius" android:topRightRadius="0dp" android:bottomRightRadius="0dp" android:bottomLeftRadius="@dimen/edge_radius"/>
 </shape>
