--- a/app/src/main/res/drawable/bg_thumbnail.xml
+++ b/app/src/main/res/drawable/bg_thumbnail.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#FFFFFF" />
     <stroke android:width=".05dp" android:color="#ffffff" />
-    <corners android:topLeftRadius="0dp" android:topRightRadius="11dp" android:bottomRightRadius="11dp" android:bottomLeftRadius="0dp"/>
+    <corners android:topLeftRadius="0dp" android:topRightRadius="@dimen/edge_radius" android:bottomRightRadius="@dimen/edge_radius" android:bottomLeftRadius="0dp"/>
 </shape>
