--- a/app/src/main/res/drawable/rounded_edge.xml
+++ b/app/src/main/res/drawable/rounded_edge.xml
@@ -20,7 +20,7 @@
     </padding>
 
     <corners
-        android:radius="11dp"   >
+        android:radius="@dimen/edge_radius"   >
     </corners>
 
 </shape>
