--- a/app/src/main/res/layout/note_layout_expanded.xml
+++ b/app/src/main/res/layout/note_layout_expanded.xml
@@ -114,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="-11dp"
             app:cardElevation="0dp"
-            app:cardCornerRadius="11dp"
+            app:cardCornerRadius="@dimen/edge_radius"
             >
 
             <com.ilibellus.models.views.SquareImageView
