--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
 
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="edge_radius">6dp</dimen>
 
     <dimen name="activity_additional_margin">0dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
